// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip should match snapshot for clickable chip 1`] = `
<button
  class="font-medium rounded-full transition-all duration-200 bg-stone-100 text-stone-800 hover:bg-stone-200 px-3 py-2 text-sm cursor-pointer"
>
  Test Chip
</button>
`;

exports[`Chip should match snapshot for large chip 1`] = `
<span
  class="font-medium rounded-full transition-all duration-200 bg-stone-100 text-stone-800 hover:bg-stone-200 px-4 py-2 text-base"
>
  Test Chip
</span>
`;

exports[`Chip should match snapshot for primary variant 1`] = `
<span
  class="font-medium rounded-full transition-all duration-200 bg-stone-100 text-stone-800 hover:bg-stone-200 px-3 py-2 text-sm"
>
  Test Chip
</span>
`;
